--- a/assets/scss/toc/_styles_project_toc.scss
+++ b/assets/scss/toc/_styles_project_toc.scss
@@ -2,6 +2,7 @@
 
 .td-sidebar-toc {
   padding: 0;
+  border-left: 1px solid var(--border-color);
 }
 
 .td-toc {
